--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,15 @@
 <resources>
     <string name="app_name">Simple File Manager</string>
     <string name="action_settings">Settings</string>
-    <string name="FreeOfTotal">Free %1$s of %2$s</string>
+
     <string name="select">Select</string>
     <string name="select_all">Select All</string>
     <string name="clear_selection">Clear selection</string>
+
     <string name="delete">Delete</string>
     <string name="rename">Rename</string>
     <string name="info">Description</string>
     <string name="open">Open</string>
+
+    <string name="free_of_total_space">Free %1$s of %2$s</string>
 </resources>
